--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -25,5 +25,6 @@ linter:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
     lowercase_with_underscores: false
+    unrelated_type_equality_checks: dalse
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
