--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   go_router: ^6.2.0
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
