--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_svg: ^1.1.6
   go_router: ^6.2.0
   page_transition: ^2.0.9
+  intl: ^0.17.0
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
