--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   page_transition: ^2.0.9
   intl: ^0.17.0
   modal_bottom_sheet: ^2.1.2
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
