--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   intl: ^0.17.0
   modal_bottom_sheet: ^2.1.2
   uuid: ^3.0.7
+  table_calendar: ^3.0.8
+  flutter_calendar_carousel: ^2.4.1
 
 dev_dependencies:
   flutter_test:
