--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -24,7 +24,9 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    constant_identifier_names: false
+    import_of_legacy_library_into_null_safe: false
     lowercase_with_underscores: false
-    unrelated_type_equality_checks: dalse
+    unrelated_type_equality_checks: false
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
