--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.5 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,10 +14,11 @@ dependencies:
   go_router: ^6.2.0
   page_transition: ^2.0.9
   intl: ^0.17.0
-  modal_bottom_sheet: ^2.1.2
+  modal_bottom_sheet: ^3.0.0-pre
   uuid: ^3.0.7
   table_calendar: ^3.0.8
   flutter_calendar_carousel: ^2.4.1
+  flutter_circular_slider: ^2.5.0
 
 dev_dependencies:
   flutter_test:
