--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -26,10 +26,14 @@ linter:
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
     constant_identifier_names: false
     curly_braces_in_flow_control_structures: false
+    depend_on_referenced_packages: false
     import_of_legacy_library_into_null_safe: false
     lowercase_with_underscores: false
     non_constant_identifier_names: false
     unnecessary_import: false
+    unnecessary_null_comparison: false
+    unused_local_variable: false
     unrelated_type_equality_checks: false
+    use_build_context_synchronously: false
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
