--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_circular_slider: ^2.5.0
   search_cep: ^4.0.1
   brasil_fields: ^1.9.1
-  widget_loading: ^0.3.2
+  flutter_styled_toast: ^2.1.3
 
 dev_dependencies:
   flutter_test:
