--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   search_cep: ^4.0.1
   brasil_fields: ^1.9.1
   flutter_styled_toast: ^2.1.3
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
