--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_styled_toast: ^2.1.3
   flutter_masked_text2: ^0.9.1
   another_xlider: ^3.0.0
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
