--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   brasil_fields: ^1.9.1
   flutter_styled_toast: ^2.1.3
   flutter_masked_text2: ^0.9.1
-  another_xlider: ^3.0.0
   url_launcher: ^6.1.10
+  flutter_time_range: ^0.0.3
 
 dev_dependencies:
   flutter_test:
