--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   image_picker: ^0.8.7
   get: ^4.6.5
   camera: ^0.10.3+2
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_test:
