--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^4.3.0
   cloud_firestore: ^4.4.5
   firebase_ui_firestore: ^1.3.0
+  skeleton_animation: ^0.1.4
 
 dev_dependencies:
   flutter_test:
