--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   cloud_firestore: ^4.4.5
   firebase_ui_firestore: ^1.3.0
   skeleton_animation: ^0.1.4
+  google_sign_in: ^6.0.2
+  google_sign_in_android: ^6.1.8
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
