--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,28 @@ dependencies:
   google_sign_in: ^6.0.2
   google_sign_in_android: ^6.1.8
   provider: ^6.0.5
+  flutter_native_splash: ^2.2.19
+  flutter_launcher_icons: ^0.12.0
+
+flutter_native_splash: # flutter pub run flutter_native_splash:create
+  color: "#121212"
+  image: "assets/app/icon-splash.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app/icon-app.png"
+
+flutter_launcher_icons: # flutter pub run flutter_launcher_icons
+  min_sdk_android: 21
+  image_path: "assets/app/icon-app.png"
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  adaptive_icon_background: "#121212"
+  adaptive_icon_foreground: "assets/app/icon-android.png"
 
 dev_dependencies:
   flutter_test:
@@ -46,8 +68,8 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/app/
     - assets/icons/
-    - assets/images/
 
   fonts:
     - family: ElementalSansPro
