--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_native_splash: ^2.2.19
   flutter_launcher_icons: ^0.12.0
   grouped_list: ^5.1.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 flutter_native_splash: # flutter pub run flutter_native_splash:create
   color: "#121212"
