--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   grouped_list: ^5.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_local_notifications: ^13.0.0
+  timezone: ^0.9.1
+  flutter_native_timezone: ^2.0.0
 
 flutter_native_splash: # flutter pub run flutter_native_splash:create
   color: "#121212"
