--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,10 @@ dependencies:
   flutter_masked_text2: ^0.9.1
   url_launcher: ^6.1.10
   flutter_time_range: ^0.0.3
-  camera_camera: ^3.0.0-dev
-  image_picker: ^0.8.7
   get: ^4.6.5
-  camera: ^0.10.3+2
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
-  cloud_firestore: ^4.4.5
+  cloud_firestore: ^4.5.1
   firebase_ui_firestore: ^1.3.0
   skeleton_animation: ^0.1.4
   google_sign_in: ^6.0.2
@@ -38,12 +35,9 @@ dependencies:
   provider: ^6.0.5
   flutter_native_splash: ^2.2.19
   flutter_launcher_icons: ^0.12.0
-  grouped_list: ^5.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  flutter_local_notifications: ^13.0.0
-  timezone: ^0.9.1
-  flutter_native_timezone: ^2.0.0
+  awesome_notifications: ^0.7.4+1
 
 flutter_native_splash: # flutter pub run flutter_native_splash:create
   color: "#121212"
