--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,36 +33,31 @@ dependencies:
   google_sign_in: ^6.0.2
   google_sign_in_android: ^6.1.8
   provider: ^6.0.5
-  flutter_native_splash: ^2.2.19
-  flutter_launcher_icons: ^0.12.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   awesome_notifications: ^0.7.4+1
-
-flutter_native_splash: # flutter pub run flutter_native_splash:create
-  color: "#121212"
-  image: "assets/app/icon-splash.png"
-  android: true
-  ios: true
-
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/app/icon-app.png"
-
-flutter_launcher_icons: # flutter pub run flutter_launcher_icons
-  min_sdk_android: 21
-  image_path: "assets/app/icon-app.png"
-  android: "launcher_icon"
-  ios: true
-  remove_alpha_ios: true
-  adaptive_icon_background: "#121212"
-  adaptive_icon_foreground: "assets/app/icon-android.png"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.0
+  flutter_native_splash: ^2.2.19
+
+flutter_icons: # flutter pub run flutter_launcher_icons:main
+  min_sdk_android: 21
+  android: "ic_launcher"
+  ios: true
+  remove_alpha_ios: true
+  color: "#121212"
+  image_path: "assets/app/ic_launcher.png"
+
+flutter_native_splash: # flutter pub run flutter_native_splash:create
+  color: "#121212"
+  icon_background_color: "#121212"
+  image: "assets/app/ic_splash.png"
+  android: true
+  ios: true
 
 flutter:
   uses-material-design: true
