--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  awesome_notifications: ^0.7.4+1
+  awesome_notifications: any
 
 dev_dependencies:
   flutter_test:
